--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <base href="/" />
-    <!-- <base href="https://chazkondo.github.io/ikewai-admin-gh/" /> -->
+    <!-- <base href="/" /> -->
+    <base href="https://chazkondo.github.io/ikewai-admin-gh/" />
     <title>Ike Wai Microbial Dataset</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
