--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <style>
         a { cursor: pointer }
     </style>
-</head>
+<link rel="stylesheet" href="styles.2ec114706c10e29917c6.css"></head>
 <body>
     <app>Loading...</app>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.834c8c2024bec6d41df0.js"></script><script type="text/javascript" src="scripts.54caefbd53f167ac341c.js"></script><script type="text/javascript" src="main.f52d63a1a4be4561da3a.js"></script></body>
 </html>
